--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Wunder Shopping List</name>
+    <name>Wunderlist</name>
 
     <developers>
         <developer>
@@ -17,19 +17,50 @@
         </developer>
     </developers>
 
+    <properties>
+        <spring.version>4.3.9.RELEASE</spring.version>
+        <alexa-skills-kit.version>1.3.1</alexa-skills-kit.version>
+        <lombok.version>1.16.16</lombok.version>
+        <httpclient.version>4.5.3</httpclient.version>
+        <junit.version>4.12</junit.version>
+    </properties>
+
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.amazon.alexa</groupId>
             <artifactId>alexa-skills-kit</artifactId>
-            <version>1.3.1</version>
+            <version>${alexa-skills-kit.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.16</version>
+            <version>${lombok.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -63,7 +94,6 @@
             </plugin>
         </plugins>
     </build>
-
 
 
 </project>
